# MAIC

./: .coverage  .gitignore  .pre-commit-config.yaml  .render.yaml  APP_START_GUIDE.md  AUTO_TEST_MECHANISM.md  CHANGELOG.md  CODEOWNERS  DEVELOPMENT_WORKFLOW.md  MAIC PROJECT MASTER PLAN  MASTER_PLAN.md  PORJECT_STATUS.md  PROJECT_STATUS.md  README.md  README_AUTO_SETUP.md  SECRETS_SETUP.md  TESTING_PROCESS.md  WORKSPACE_INDEX.md  WORK_SESSION_LOG.md  admin_prompt.py  app.py  app_slim.py  auto_restart_app.py  auto_test_runner.py  check_code.py  components.md  conftest.py  create_demo_images.py  debug_admin_login.py  debug_playwright_test.py  debug_token_issue.py  demo_components.py  demo_components_final.py  demo_components_final_fixed.py  demo_components_fixed.py  demo_components_perfect.py  demo_components_streamlit_native.py  demo_components_ultimate.py  demo_components_with_local_images.py  design_analysis.html  (+72 more)
.ci/: patch-guard.yml
.cursor/: CURSOR_SYNC_GUIDE.md  GIT_WORKFLOW_GUIDE.md  MCP_SETUP_GUIDE.md  TESTING_GUIDE.md  config.json  config_alternative.json  config_minimal.json  mcp_setup.md
.cursor/backups/: mcp_backup_20251003_032330.json
.cursor/rules/: 00-top-tier-coding-expert.md  99-ssot-and-precedence.md  coding-expert.mdc  linear-components.mdc
.cursor_settings/: backup_info.json  settings.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TEST_PR_TITLE_GUARD.md  pull_request_template.md  semantic.yml
.github/ISSUE_TEMPLATE/: *  bug_report.yml  docs.yml  feature_request.yml
.github/codeql/: codeql-config-pr.yml  codeql-config-weekly.yml  codeql-full.yml  codeql-pr.yml
.github/workflows/: <publish>.yml  PULL_REQUEST_TEMPLATE.MD  _paths_filter.yml  apply-patch.yml  canon-validate.yml  ci-core-probe.yml  ci-validate.yml  ci.yml  codeql.yml  coverage.yml  deploy-streamlit.yml  gen-tree.yml  guard-patch.yml  maintenance-fixups.yml  mode-docs.yml  nightly.yml  no-ellipsis-autofix.yml  no-ellipsis-gate.yml  one-shot-ellipsis-clean.yml  one-shot-error-fixes.yml  pr-title.yml  publish-index-bundle.yml  publish-index.yml  publish-prompts.yml  quality-gate.yml  rag-fixture.yml  rag-tests.yml  release-build-publish.yml  release-cut.yml  release-restore-check.yml  release.yml  sbom.yml  security.yml  sha-helper.yml  ssot-pointer.yml  tests.yml
.streamlit/: config.toml  config.toml.backup  secrets.example.toml
config/: coverage.xml  requirements-dev.txt
design_reference/: 5890623.ai
docs/: AI_AUTO_VALIDATION_GUIDE.md  AI_RULES.md  CONVENTIONS.MD  CURRENT_STATUS.md  DEVELOPMENT_HISTORY.md  NEXT_ACTIONS.md  PROJECT_STRUCTURE.md  README.md  WORKSPACE_INDEX.md  components.md  ui_cleanup_plan.md
docs/_archive/: 2025-09-07_PROJECT_STATUS.md  INVENTORY_legacy.json  MASTERPLAN.md  MASTERPLAN_vNext.md  PR-A1_app_slim_admin_panel.md
docs/_gpt/: AUDIT_Docs_Cleanup_2025-09-21.md  AUDIT_RepoMap_2025-09-21.md  CHANGELOG.md  COMPLETE_REPO_STRUCTURE_OPTIMIZATION.md  CONVENTIONS.MD  CONVENTIONS.md  DOCS_INVENTORY_2025-09-21.csv  INVENTORY.json  MAIC_refactor_report.md  MAINTENANCE_CHECKLIST.md  MASTERPLAN.md  MASTERPLAN_vFinal.md  MASTERPLAN_vNext.md  OPTIMIZATION_ANALYSIS_2025-10-06.md  OPTIMIZATION_MASTERPLAN.md  OPTIMIZATION_MASTERPLAN_FINAL.md  README.MD  REPO_OPTIMIZATION_EXECUTION_LOG.md  REPO_STRUCTURE_OPTIMIZATION.md  TREE.md  UI_AUDIT_REPORT.md  UI_INTEGRATION_COMPLETION_REPORT.md  (+5 more)
legacy/: advanced_neumorphism_elements.py  maic_app.html  maic_neumorphism_app.html  maic_neumorphism_integrated.py  main_app_duplicate.py  neumorphism_app_duplicate.py  neumorphism_components.html  neumorphism_elements_fixed.py  pure_neumorphism.py  run_neumorphism.py  working_neumorphism.py
ops/: redeploy-2025-09-25.md
pages/: 10_admin_prompt.py  15_index_status.py  20_components.py  90_admin_prompt.py
schemas/: prompts.schema.json
scripts/: build_and_publish.py  build_prompts_bundle.py  build_prompts_full.py  check_ssot_pointer.py  fix_makers_and_ellipsis.py  fix_markers_and_ellipsis.py  gen_tree.py  gen_tree.toml  hotfix_patch_guard.py  no_ellipsis_gate.py  normalize_prompts_yaml.py  publish_index_bundle.py  restore_and_verify.py  restore_latest_index.py  smoke_checks.py  validate_prompts.py  verify_index_ready.py  verify_mcp_config.py
src/: __init__.py  config.py  prompt_modes.py  rag_engine.py  ui_admin.py  ui_components.py  ui_orchestrator.py  ui_theme.py  utills.py
static/: neumorphism_components.html  style.css
tests/: conftest.py  test_admin_login.py  test_agents_common_api.py  test_agents_no_local_duplicates.py  test_agents_use_common_module.py  test_app_helpers_uniqueness.py  test_boot_auto_restore_index.py  test_brackets_validator.py  test_core_index_probe.py  test_eval_parser.py  test_evaluator_prompt_shape.py  test_generate_mode_docs_smoke.py  test_index_restore.py  test_label_rag.py  test_modes.py  test_modes_canon_config.py  test_modes_router.py  test_modes_ssot_templates.py  test_no_legacy_imports.py  test_persist_calls_standardized.py  test_prepared_helpers_api_surface.py  test_prompt_builder.py  test_rag_engine_bm25.py  test_rag_engine_toggle.py  test_rag_search.py  test_removed_files_absent.py  test_security_enhancement.py  test_sentence_prompt_template.py  test_smoke_app_import.py  test_smoke_gdrive_driver.py  test_ui_header_ready_level.py
tools/: README_ERROR_SYSTEM.md  admin_prompt.py  ai_auto_validator.py  ai_behavior_enforcer.py  ai_integration_final.py  auto_error_fixer.py  auto_setup_verification.py  auto_validator_with_approval.py  build_and_publish.py  changelog_release.py  check_coverage.py  check_import_paths.sh  check_workspace_pointer.py  coverage_baseline.txt  end_work.bat  end_work.py  error_log.json  error_monitor.py  error_tracker.py  gen_tree.py  generate_mode_docs.py  guard_patch.py  mandatory_validator.py  no_ellipsis_gate.py  print_profiles.py  rule_reader.py  smoke_checks.py  start_work.bat  start_work.py  start_work_auto.py  test_error_tracker.py  test_mandatory_validator.py  test_port_validation.py  universal_validator.py  validate_canon.py  work_context_manager.py
ui/: admin_prompts.py
(+219 files in other folders)
