# File: pyproject.toml
# ===== [00] BUILD SYSTEM =====================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ===== [01] PROJECT METADATA ================================================
[project]
name = "my-ai-teacher"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
description = "Clean scaffold for AI Teacher (Streamlit + RAG)"
readme = "README.md"
authors = [{ name = "you" }]

# ===== [02] RUNTIME DEPS =====================================================
dependencies = [
  "streamlit>=1.32",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "llama-index-core>=0.10",
  "google-api-python-client>=2.136.0",
  "google-auth>=2.30.0",
  # ✅ 보안: pypdf 6.x 이상으로 상향 (GHSA-7hfw-26vp-jp8m 회피)
  "pypdf>=6,<7",
]

# ===== [03] DEV DEPS (optional) =============================================
[project.optional-dependencies]
dev = [
  "mypy>=1.7",
  "ruff>=0.5",
  "bandit>=1.7",
  "pytest>=8",
  "types-requests",
  "types-PyYAML",
]

# ===== [04] TOOL CONFIG POINTERS ============================================
[tool.ruff]
extend = "ruff.toml"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
config_file = "mypy.ini"

# ===== [05] SETUPTOOLS (package discovery) ==================================
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# ===== [06] POETRY SETUP (disable package install of the app) ===============
[tool.poetry]
package-mode = false

# [ruff] START (추가/교체)
[tool.ruff]
line-length = 100  # 현재 리포 정책 유지

[tool.ruff.lint]
# 전역 선택 규칙 예시는 그대로 두고…
# select = ["E", "F", "I", "UP", "B"]

# 파일별 예외: no_ellipsis_gate는 E501만 무시
per-file-ignores = { "scripts/no_ellipsis_gate.py" = ["E501"] }
# [ruff] END
